--- a/src/layout/Footer/index.css
+++ b/src/layout/Footer/index.css
@@ -1,12 +1,29 @@
 #footer {
-    width: 100vw;
+    width: 103%;
+    height: 10%;
     position: absolute;
-    background-color: black;
-    padding: 10px;
+    background-color: #262c66;
     display: block;
-    text-align: center;
     justify-content: center;
-    display: flex;
-    margin: 0;
-    color: black;
-}
+    text-align: center;
+    margin-left: -10px;
+    border-color: #262c66;
+    border-style: solid;
+    border-width: 2px;
+    color: white;
+  
+  }
+  
+  .details {
+    color: white;
+    font-size: 20px;
+    margin-top: 20px;
+    
+  }
+  
+  /* h2{
+    color: #f8f4f6;
+    font-style: italic;
+    font-size: 10px;
+    margin-top: -10px;
+  } */
